--- a/fraud_detection.ipynb
+++ b/fraud_detection.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "91155c25",
+   "metadata": {},
+   "source": [
+    "# Credit Card Fraud Detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dea168a4",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0188dad5",
    "metadata": {},
    "outputs": [],
@@ -12,6 +28,103 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from matplotlib import gridspec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0d79173",
+   "metadata": {},
+   "source": [
+    "## Reading the data\n",
+    "\n",
+    "Here read_csv() is called which will read in the csv file. Using the pandas library we can store this in a variable called data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5d1da90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(\"creditcard.csv\")\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a93375a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8faf02db",
+   "metadata": {},
+   "source": [
+    "The data here is then filtered to store normal transactions separate from valid transactions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b30ecd09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fraud = data[data['Class'] == 1]\n",
+    "valid = data[data['Class'] == 0]\n",
+    "outlierFraction = len(fraud)/float(len(valid))\n",
+    "print(outlierFraction)\n",
+    "print('Fraud Cases: {}'.format(len(data[data['Class'] == 1])))\n",
+    "print('Valid Transactions: {}'.format(len(data[data['Class'] == 0])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d25e31e",
+   "metadata": {},
+   "source": [
+    "Here we compare the transaction amounts for fraudulent and normal transactions. This will help us understand if there are any significant differences in the monetary value of fraudulent transactions. From the output we observe that fraudulent transactions tend to have higher average amounts which is important in fraud detection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e6808f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Amount details of the fraudulent transaction\")\n",
+    "fraud.Amount.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c17e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"details of valid transaction\")\n",
+    "valid.Amount.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72048c08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrmat = data.corr()\n",
+    "fig = plt.figure(figsize = (12, 9))\n",
+    "sns.heatmap(corrmat, vmax = .8, square = True)\n",
+    "plt.show()"
    ]
   }
  ],
